// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test en GifGrid should match the snapshot  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Microsoft
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test en GifGrid should show items when images are loaded with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Microsoft
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="TITULO 1"
      url="http://www.google.com/HOLA.jpg"
    />
    <GifGridItem
      id="DFG"
      key="DFG"
      title="TITULO 2"
      url="http://www.google.com/CHAU.jpg"
    />
  </div>
</Fragment>
`;
